--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,29 @@
-#root {
+.wrapper {
+  position: relative;
   height: 100vh;
   width: 100vw;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: 400px calc(100vw - 400px)
+}
+
+.btn {
+  display: block;
+  background-color: transparent;
+  border: 0;
+  box-shadow: none;
+}
+
+.sidebar-btn {
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  z-index: 12;
+  width: 20px;
+  height: 20px;
+  background: url("./assets/Menu.png") no-repeat center;
+  background-size: contain;
+}
+
+.sidebar-btn:focus {
+  outline: none;
 }
