--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,8 +1,12 @@
 main {
     background-color: white;
     position: relative;
-    grid-column: 2 / 7;
+    grid-column: 1/3;
     padding: 2vh 2vw
+}
+
+aside.sidebar--active ~ main {
+    grid-column: 2/3;
 }
 
 main > .container {
@@ -11,7 +15,6 @@ main > .container {
     justify-content: flex-start;
     align-items: center;
     align-content: center;
-    padding: 5vh;
 }
 
 main header {
@@ -31,16 +34,16 @@ main .table {
 .btn {
     cursor: pointer;
     border: 0;
-    border-radius: 5px;
-    padding: 10px 20px;
     text-transform: uppercase;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Segoe UI', Arial, sans-serif;
     transition: background-color .3s, color .3s
 }
 
 .btn-primary {
+    border-radius: 5px;
+    padding: 10px 20px;
     background-color: var(--blue);
-    border: 1px solid var(--white);
+    border: 1px solid white;
     color: white;
 }
 
