--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,34 +1,23 @@
 main {
+    min-width: calc(100%);
     background-color: white;
     position: relative;
-    grid-column: 1/3;
-    padding: 2vh 2vw
+    transition: all .4s;
+    left: -400px
 }
 
 aside.sidebar--active ~ main {
-    grid-column: 2/3;
+    min-width: calc(100% - 400px);
+    left: 0;
 }
 
 main > .container {
+    height: 100%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
     align-items: center;
     align-content: center;
-}
-
-main header {
-    text-align: center;
-}
-
-main h1 {
-    font-size: 150%;
-    text-align: center;
-    margin-bottom: 2vh;
-}
-
-main .table {
-    height: 50%;
 }
 
 .btn {
