--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -2,7 +2,7 @@ aside.sidebar {
     height: 100%;
     background-color: var(--gray);
     position: relative;
-    grid-column: 1/1;
+    min-width: 400px;
     z-index: 10;
     transition: transform .4s;
     transform: translateX(-100%);
