--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,4 +1,5 @@
 main {
+    height: 100%;
     min-width: calc(100%);
     background-color: white;
     position: relative;
@@ -12,32 +13,61 @@ aside.sidebar--active ~ main {
 }
 
 main > .container {
-    height: 100%;
+    height: calc(100% - 40px * 2);
+    width: 100%;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     align-content: center;
+    margin: 40px 0;
 }
 
 .btn {
     cursor: pointer;
     border: 0;
+    padding: 10px 20px;
+    border-radius: 5px;
     text-transform: uppercase;
     font-family: 'Segoe UI', Arial, sans-serif;
+    font-size: 90%;
     transition: background-color .3s, color .3s
 }
 
 .btn-primary {
-    border-radius: 5px;
-    padding: 10px 20px;
-    background-color: var(--blue);
+    background-color: var(--darkblue);
     border: 1px solid white;
     color: white;
 }
 
 .btn-primary:hover {
-    border-color: var(--blue);
-    color: var(--blue);
+    border-color: var(--darkblue);
+    color: var(--darkblue);
     background-color: white;
+}
+
+.btn-save {
+    background-color: white;
+    border: 1px solid var(--blue);
+    color: var(--blue);
+}
+
+.btn-save:hover {
+    background-color: var(--blue);
+    color: white;
+}
+
+.btn-set {
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+}
+
+.btn-set > .btn {
+    margin: 10px;
+}
+
+a.btn, a.btn:visited, a.btn:focus {
+    text-decoration: none;
 }
