--- a/src/App.css
+++ b/src/App.css
@@ -13,17 +13,13 @@
   box-shadow: none;
 }
 
-.sidebar-btn {
+.hamburger {
   position: absolute;
   top: 25px;
   left: 25px;
   z-index: 12;
-  width: 20px;
-  height: 20px;
-  background: url("./assets/Menu.png") no-repeat center;
-  background-size: contain;
 }
 
-.sidebar-btn:focus {
+.hamburger:focus {
   outline: none;
 }
