--- a/client/src/components/Main/Main.css
+++ b/client/src/components/Main/Main.css
@@ -13,14 +13,20 @@ aside.sidebar--active ~ main {
 }
 
 main > .container {
-    height: calc(100% - 40px * 2);
+    height: calc(100%);
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
     align-content: center;
-    margin: 40px 0;
+    margin: 0;
+    overflow-y: auto;
+}
+
+.container > div {
+    width: 95%;
+    height: 70%;
 }
 
 .btn {
@@ -57,6 +63,12 @@ main > .container {
     color: white;
 }
 
+.btn:disabled {
+    background-color: var(--gray);
+    border: var(--gray);
+    color: #CCCCCC;
+}
+
 .btn-save {
     background-color: white;
     border: 1px solid var(--blue);
@@ -81,4 +93,9 @@ main > .container {
 
 a.btn, a.btn:visited, a.btn:focus {
     text-decoration: none;
+}
+
+.status {
+    color: var(--blue);
+    text-align: center;
 }
