--- a/client/src/components/Main/Main.css
+++ b/client/src/components/Main/Main.css
@@ -13,20 +13,27 @@ aside.sidebar--active ~ main {
 }
 
 main > .container {
-    height: calc(100%);
-    width: 100%;
+    position: relative;
+    height: 100%;
+    width: 90%;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
-    align-items: center;
-    align-content: center;
-    margin: 0;
-    overflow-y: auto;
+    margin: auto auto;
 }
 
-.container > div {
-    width: 95%;
-    height: 70%;
+.container > .content-wrapper {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.content-wrapper > .chart-wrapper {
+    position: relative;
+    height: 100%;
 }
 
 .btn {
@@ -82,6 +89,7 @@ main > .container {
 
 .btn-set {
     width: 100%;
+    min-height: 62px;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
